fixed wrap styling for media input and tab list

--- a/your_nutritionist/frontend/src/Components/Util/TabList/TabList.scss
+++ b/your_nutritionist/frontend/src/Components/Util/TabList/TabList.scss
@@ -1,5 +1,7 @@
 .tab-list-wrapper {
 	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
 	margin-bottom: 0;
 	position: relative;
 	z-index: 2;
